add comments for comprehension

--- a/week_5_batch_processing/code/06_spark_sql.ipynb
+++ b/week_5_batch_processing/code/06_spark_sql.ipynb
@@ -11,14 +11,14 @@
      "output_type": "stream",
      "text": [
       "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/jars/spark-unsafe_2.12-3.0.3.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/falakjain/spark/spark-3.2.2-bin-hadoop3.2/jars/spark-unsafe_2.12-3.2.2.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
       "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
       "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
       "WARNING: All illegal access operations will be denied in a future release\n",
-      "22/02/17 22:43:50 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "22/11/25 19:39:11 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -47,46 +47,33 @@
     }
    ],
    "source": [
+    "# read data for 2020 & 2021 green parquet files\n",
     "df_green = spark.read.parquet('data/pq/green/*/*')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0ca5ee99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "649bb4da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_green = df_green \\\n",
-    "    .withColumnRenamed('lpep_pickup_datetime', 'pickup_datetime') \\\n",
-    "    .withColumnRenamed('lpep_dropoff_datetime', 'dropoff_datetime')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "id": "90cd6845",
+   "id": "962cdba1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# read data for 2020 & 2021 yellow parquet files\n",
     "df_yellow = spark.read.parquet('data/pq/yellow/*/*')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "88822efd",
+   "execution_count": 7,
+   "id": "649bb4da",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# rename date time columns in yellow and green data to match\n",
+    "df_green = df_green \\\n",
+    "    .withColumnRenamed('lpep_pickup_datetime', 'pickup_datetime') \\\n",
+    "    .withColumnRenamed('lpep_dropoff_datetime', 'dropoff_datetime')\n",
+    "\n",
     "df_yellow = df_yellow \\\n",
     "    .withColumnRenamed('tpep_pickup_datetime', 'pickup_datetime') \\\n",
     "    .withColumnRenamed('tpep_dropoff_datetime', 'dropoff_datetime')"
@@ -94,11 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "610167a2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# find columns common to both data\n",
     "common_colums = []\n",
     "\n",
     "yellow_columns = set(df_yellow.columns)\n",
@@ -110,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "839d773f",
    "metadata": {},
    "outputs": [],
@@ -120,23 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "2498810a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create new column with color as constant literal value\n",
     "df_green_sel = df_green \\\n",
     "    .select(common_colums) \\\n",
-    "    .withColumn('service_type', F.lit('green'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "19032efc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    .withColumn('service_type', F.lit('green'))\n",
+    "\n",
     "df_yellow_sel = df_yellow \\\n",
     "    .select(common_colums) \\\n",
     "    .withColumn('service_type', F.lit('yellow'))"
@@ -144,17 +125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "f5b0f3d1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create union of 2 datasets\n",
     "df_trips_data = df_green_sel.unionAll(df_yellow_sel)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "1bed8b33",
    "metadata": {},
    "outputs": [
@@ -162,7 +144,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 4:==================================================>      (15 + 2) / 17]\r"
      ]
     },
     {
@@ -172,10 +154,18 @@
       "+------------+--------+\n",
       "|service_type|   count|\n",
       "+------------+--------+\n",
-      "|       green| 2304517|\n",
-      "|      yellow|39649199|\n",
+      "|       green| 2802931|\n",
+      "|      yellow|55553400|\n",
       "+------------+--------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
      ]
     }
    ],
@@ -185,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "28cc8fa3",
    "metadata": {},
    "outputs": [
@@ -213,7 +203,7 @@
        " 'service_type']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,17 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "36e90cbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_trips_data.registerTempTable('trips_data')"
+    "# convert spark dataframe to table\n",
+    "df_trips_data.createOrReplaceTempView('trips_data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "d0e01bf1",
    "metadata": {},
    "outputs": [
@@ -242,7 +233,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 10:==============================================>         (14 + 3) / 17]\r"
      ]
     },
     {
@@ -252,10 +243,18 @@
       "+------------+--------+\n",
       "|service_type|count(1)|\n",
       "+------------+--------+\n",
-      "|       green| 2304517|\n",
-      "|      yellow|39649199|\n",
+      "|       green| 2802931|\n",
+      "|      yellow|55553400|\n",
       "+------------+--------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
      ]
     }
    ],
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "b2ee7038",
    "metadata": {},
    "outputs": [],
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "f67eeb92",
    "metadata": {},
    "outputs": [
@@ -320,6 +319,7 @@
     }
    ],
    "source": [
+    "# save all files to one partition\n",
     "df_result.coalesce(1).write.parquet('data/report/revenue/', mode='overwrite')"
    ]
   },
@@ -348,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
