--- a/week_5_batch_processing/code/09_spark_gcs.ipynb
+++ b/week_5_batch_processing/code/09_spark_gcs.ipynb
@@ -20,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "credentials_location = '/home/alexey/.google/credentials/google_credentials.json'\n",
+    "# configuring spark with GCS connector\n",
+    "credentials_location = '/home/falakjain/.gc/ny-rides.json'\n",
     "\n",
     "conf = SparkConf() \\\n",
     "    .setMaster('local[*]') \\\n",
@@ -41,11 +42,11 @@
      "output_type": "stream",
      "text": [
       "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/jars/spark-unsafe_2.12-3.0.3.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/falakjain/spark/spark-3.2.2-bin-hadoop3.2/jars/spark-unsafe_2.12-3.2.2.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
       "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
       "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
       "WARNING: All illegal access operations will be denied in a future release\n",
-      "22/03/30 12:25:23 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/11/25 23:10:12 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
@@ -53,6 +54,7 @@
     }
    ],
    "source": [
+    "# create spark context\n",
     "sc = SparkContext(conf=conf)\n",
     "\n",
     "hadoop_conf = sc._jsc.hadoopConfiguration()\n",
@@ -70,6 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create session\n",
     "spark = SparkSession.builder \\\n",
     "    .config(conf=sc.getConf()) \\\n",
     "    .getOrCreate()"
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "1ee1eb1d",
    "metadata": {},
    "outputs": [
@@ -85,17 +88,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\r",
+      "[Stage 0:>                                                          (0 + 1) / 1]\r",
+      "\r",
       "                                                                                \r"
      ]
     }
    ],
    "source": [
-    "df_green = spark.read.parquet('gs://dtc_data_lake_de-zoomcamp-nytaxi/pq/green/*/*')"
+    "df_green = spark.read.parquet('gs://dtc_data_lake_dtc-de-368104/pq/green/*/*')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "104b40ab",
    "metadata": {},
    "outputs": [
@@ -109,10 +115,10 @@
     {
      "data": {
       "text/plain": [
-       "2304517"
+       "2802931"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
