--- a/week_1_basics_n_setup/2_docker_sql/upload-data.ipynb
+++ b/week_1_basics_n_setup/2_docker_sql/upload-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "8d7e4358",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "05dd7e0e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.3.4'"
+       "'2.0.3'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "a1d1f971",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('yellow_tripdata_2021-01.csv', nrows=100)"
+    "df = pd.read_parquet('yellow_tripdata_2023-01.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "f9e76d7f",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f84ca922",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "339a5c72",
    "metadata": {},
    "outputs": [],
@@ -114,12 +114,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "aade3ce4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(n=0).to_sql(name='yellow_taxi_data', con=engine, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "50b727a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "766"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_sql(name='yellow_taxi_data', con=engine, if_exists='append')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "de7b9007",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_iter = pd.read_csv('yellow_tripdata_2021-01.csv', iterator=True, chunksize=100000)"
+    "# df_iter = pd.read_csv('yellow_tripdata_2021-01.csv', iterator=True, chunksize=100000)"
    ]
   },
   {
@@ -129,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = next(df_iter)"
+    "# df = next(df_iter)"
    ]
   },
   {
@@ -150,7 +192,7 @@
     }
    ],
    "source": [
-    "len(df)"
+    "# len(df)"
    ]
   },
   {
@@ -160,8 +202,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.tpep_pickup_datetime = pd.to_datetime(df.tpep_pickup_datetime)\n",
-    "df.tpep_dropoff_datetime = pd.to_datetime(df.tpep_dropoff_datetime)"
+    "# df.tpep_pickup_datetime = pd.to_datetime(df.tpep_pickup_datetime)\n",
+    "# df.tpep_dropoff_datetime = pd.to_datetime(df.tpep_dropoff_datetime)"
    ]
   },
   {
@@ -171,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "# df"
    ]
   },
   {
@@ -181,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head(n=0).to_sql(name='yellow_taxi_data', con=engine, if_exists='replace')"
+    "# df.head(n=0).to_sql(name='yellow_taxi_data', con=engine, if_exists='replace')"
    ]
   },
   {
@@ -199,7 +241,7 @@
     }
    ],
    "source": [
-    "%time df.to_sql(name='yellow_taxi_data', con=engine, if_exists='append')"
+    "# %time df.to_sql(name='yellow_taxi_data', con=engine, if_exists='append')"
    ]
   },
   {
@@ -209,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import time"
+    "# from time import time"
    ]
   },
   {
@@ -269,64 +311,64 @@
     }
    ],
    "source": [
-    "while True: \n",
-    "    t_start = time()\n",
+    "# while True: \n",
+    "#     t_start = time()\n",
     "\n",
-    "    df = next(df_iter)\n",
+    "#     df = next(df_iter)\n",
     "\n",
-    "    df.tpep_pickup_datetime = pd.to_datetime(df.tpep_pickup_datetime)\n",
-    "    df.tpep_dropoff_datetime = pd.to_datetime(df.tpep_dropoff_datetime)\n",
+    "#     df.tpep_pickup_datetime = pd.to_datetime(df.tpep_pickup_datetime)\n",
+    "#     df.tpep_dropoff_datetime = pd.to_datetime(df.tpep_dropoff_datetime)\n",
     "    \n",
-    "    df.to_sql(name='yellow_taxi_data', con=engine, if_exists='append')\n",
+    "#     df.to_sql(name='yellow_taxi_data', con=engine, if_exists='append')\n",
     "\n",
-    "    t_end = time()\n",
+    "#     t_end = time()\n",
     "\n",
-    "    print('inserted another chunk, took %.3f second' % (t_end - t_start))"
+    "#     print('inserted another chunk, took %.3f second' % (t_end - t_start))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "c2178a11",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2022-01-15 23:57:02--  https://s3.amazonaws.com/nyc-tlc/misc/taxi+_zone_lookup.csv\n",
-      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.216.113.61\n",
-      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.216.113.61|:443... connected.\n",
+      "--2024-02-24 17:14:39--  https://d37ci6vzurychx.cloudfront.net/misc/taxi_zone_lookup.csv\n",
+      "Resolving d37ci6vzurychx.cloudfront.net (d37ci6vzurychx.cloudfront.net)... 52.85.39.65, 52.85.39.117, 52.85.39.97, ...\n",
+      "Connecting to d37ci6vzurychx.cloudfront.net (d37ci6vzurychx.cloudfront.net)|52.85.39.65|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 12322 (12K) [application/octet-stream]\n",
-      "Saving to: 'taxi+_zone_lookup.csv'\n",
+      "Length: 12331 (12K) [text/csv]\n",
+      "Saving to: ‘taxi_zone_lookup.csv’\n",
       "\n",
-      "     0K .......... ..                                         100%  910K=0.01s\n",
+      "taxi_zone_lookup.cs 100%[===================>]  12.04K  --.-KB/s    in 0s      \n",
       "\n",
-      "2022-01-15 23:57:02 (910 KB/s) - 'taxi+_zone_lookup.csv' saved [12322/12322]\n",
+      "2024-02-24 17:14:40 (78.9 MB/s) - ‘taxi_zone_lookup.csv’ saved [12331/12331]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "!wget https://s3.amazonaws.com/nyc-tlc/misc/taxi+_zone_lookup.csv"
+    "!wget https://d37ci6vzurychx.cloudfront.net/misc/taxi_zone_lookup.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "bdefce25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_zones = pd.read_csv('taxi+_zone_lookup.csv')"
+    "df_zones = pd.read_csv('taxi_zone_lookup.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "c99e27b5",
    "metadata": {},
    "outputs": [
@@ -406,7 +448,7 @@
        "4           5  Staten Island            Arden Heights    Boro Zone"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
